cleanup post Java11 upgrade
This commit fixes some new warnings that show up after the Java11
upgrade. It also updates the Eclipse / SWTBot launch configs to use
Java11.